--- a/src/components/ProgrammingLanding/styles.sass
+++ b/src/components/ProgrammingLanding/styles.sass
@@ -13,7 +13,7 @@
     @extend %size
     position: relative
     margin: 0
-    background-color: $color-background
+    background-color: $color-background-landing
 
   .info
     @extend %size
