--- a/src/layouts/Footer/style.sass
+++ b/src/layouts/Footer/style.sass
@@ -1,6 +1,7 @@
+@import '../../sass/variables'
+  
 \:local
   .footer
-    background: linear-gradient(to top, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 100%)
     padding: 40px 25px
     color: white
-    background-color: #2e2e2e
+    background-color: $color-background-dark
