--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,2 +1,4 @@
 
-$color-background: #eee8d5
+$color-background-landing: #eee8d5
+$color-background-light: #fdfdfb
+$color-background-dark: #2d2d2a
